--- a/styles.css
+++ b/styles.css
@@ -72,7 +72,6 @@ a {
 
 .header .menu-icon {
   cursor: pointer;
-  display: inline-block;
   float: right;
   padding: 28px 20px;
   position: relative;
@@ -154,112 +153,71 @@ a {
 }
 
 /* carousel */
-* {
-  box-sizing: border-box;
-}
 .carousel {
-  padding-top: 13%;
-  height: 80vh;
-}
-
-.slider {
-  width: 100%;
-  text-align: center;
+  margin: 0 auto;
   overflow: hidden;
+  text-align: center;
 }
 
 .slides {
+  width: 100%;
   display: flex;
+  overflow-x: scroll;
+  scrollbar-width: none;
+  scroll-snap-type: x mandatory;
+  scroll-behavior: smooth;
+  margin-bottom: 1em;
+}
 
+.slides::-webkit-scrollbar {
+  display: none;
+}
+
+.slides-item {
+  align-items: center;
+  border-radius: 0.6em;
+  display: flex;
+  flex-shrink: 0;
+  justify-content: center;
+  margin: 0 1rem;
+  position: relative;
+  scroll-snap-align: center;
+  width: 200px;
+  height: 300px;
   overflow-x: auto;
   scroll-snap-type: x mandatory;
-
   scroll-behavior: smooth;
   -webkit-overflow-scrolling: touch;
 }
-.slides::-webkit-scrollbar {
-  width: 1em;
-  height: 1em;
-}
-.slides::-webkit-scrollbar-thumb {
-  background: transparent;
-}
-.slides::-webkit-scrollbar-track {
-  background: transparent;
-}
-.slides > div {
-  scroll-snap-align: center;
-  flex-shrink: 0;
-  width: 200px;
-  height: 300px;
-  margin-right: 30px;
-  border-radius: 10px;
-  background: #eee;
-  transform-origin: center center;
-  transform: scale(1);
-  transition: transform 0.5s;
-  position: relative;
 
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 100px;
+.slide-1 {
+  background-color: #fdc;
 }
 
-.author-info {
-  background: rgba(0, 0, 0, 0.75);
-  color: white;
-  padding: 0.75rem;
-  text-align: center;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  margin: 0;
-}
-.author-info a {
-  color: white;
-}
-.imgslide {
-  object-fit: cover;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+.slide-2 {
+  background-color: #bfd;
 }
 
-.slider > a {
-  display: inline-flex;
-  width: 1.5rem;
-  height: 1.5rem;
-  background: white;
-  text-decoration: none;
-  align-items: center;
-  justify-content: center;
-  border-radius: 50%;
-  margin: 0 0 0.5rem 0;
-  position: relative;
+.slide-3 {
+  background-color: #cdf;
 }
-.slider > a:active {
-  top: 1px;
+
+.slide-4 {
+  background-color: #dca;
 }
-.slider > a:focus {
-  background: #000;
+
+.slide-5 {
+  background-color: #ffc;
 }
 h3 {
   color: aquamarine;
   size: 3em;
 }
+/*buffer omdat er lege ruimte achter de header zit*/
 .bufferheader {
   height: 4em;
 }
-/* .topbuttons {
-  text-align: center;
-}
-li {
-  color: green;
-} */
+
 .topbuttons ul {
   list-style: none; /* Remove default list styles */
   padding: 0; /* Remove default padding */
@@ -279,60 +237,152 @@ li {
 .topbuttons ul li:first-child {
   color: #fff;
 }
-button {
-  display: block;
-  margin: 0 auto;
-  text-align: center;
-  text-transform: uppercase;
-  cursor: pointer;
-  font-size: 1.25em;
-  letter-spacing: 0.2em;
-  position: relative;
-  background-color: var(--merk-kleur);
-  border: none;
-  color: #fff;
-  padding: 1.1em;
-  width: 10em;
-  text-align: center;
-  transition-duration: 0.4s;
-  overflow: hidden;
-  border-radius: 8px;
+/*section voor tickets en nieuws*/
+.sectie-Tickets {
+  height: 275vh;
+  background: -webkit-radial-gradient(
+    center,
+    ellipse cover,
+    #464646 0%,
+    #171717 100%
+  );
 }
-
-.button:hover {
-  background: #fff;
-  box-shadow: 0px 2px 10px 5px var(--merk-kleur);
-  color: #000;
-}
-
-.button:after {
-  content: "";
-  background: var(--merk-kleur);
-  display: block;
-  position: absolute;
-  padding-top: 300%;
-  padding-left: 350%;
-  margin-left: -20px !important;
-  margin-top: -120%;
-  opacity: 0;
-  transition: all 0.8s;
-}
-
-.button:active:after {
-  padding: 0;
-  margin: 0;
-  opacity: 1;
-  transition: 0s;
-}
-
-.button:focus {
-  outline: 0;
-}
-.sectie2 {
-  height: 100vh;
-  background-color: aqua;
-}
+/*H2 Styling*/
 h2 {
   font-family: "Pathe";
   font-size: 1.3em;
+  color: white;
+  padding-left: 2%;
+}
+/*toggle button wat eigenlijk een image is*/
+.togglecon {
+  width: 100%;
+  display: grid;
+}
+#checkbox {
+  display: none;
+}
+.toggle {
+  height: 100px;
+  width: 350px;
+  background-image: url(./images/Scherm­afbeelding\ 2023-12-12\ om\ 17.09.59.png);
+  background-size: cover;
+  position: relative;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+}
+
+#checkbox:checked + .toggle {
+  background-image: url(./images/Scherm­afbeelding\ 2023-12-12\ om\ 17.10.11.png);
+  background-size: cover;
+}
+/*zoekbalk voor de locatie*/
+.search-bar {
+  padding: 0.7em;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  width: 80%;
+  font-size: 16px;
+  margin-left: 5%;
+  margin-bottom: 5%;
+}
+
+.carousel-nieuws {
+  margin: 0 auto;
+  overflow: hidden;
+  text-align: center;
+}
+
+.slides-nieuws {
+  width: 100%;
+
+  display: flex;
+  overflow-x: scroll;
+  scrollbar-width: none;
+  scroll-snap-type: x mandatory;
+  scroll-behavior: smooth;
+}
+
+.slides::-webkit-scrollbar {
+  display: none;
+}
+
+.slides-item-nieuws {
+  align-items: center;
+  border-radius: 0.6em;
+  display: flex;
+  flex-shrink: 0;
+  justify-content: center;
+  margin: 0 1rem;
+  position: relative;
+  scroll-snap-align: center;
+  transform: scale(1);
+
+  width: 14em;
+  height: 10em;
+  overflow-x: auto;
+  scroll-snap-type: x mandatory;
+  scroll-behavior: smooth;
+  -webkit-overflow-scrolling: touch;
+}
+
+.slide-1-nieuws {
+  background-color: #fdc;
+}
+
+.slide-2-nieuws {
+  background-color: #bfd;
+}
+
+.slide-3-nieuws {
+  background-color: #cdf;
+}
+
+.slide-4-nieuws {
+  background-color: #dca;
+}
+
+.slide-5-nieuws {
+  background-color: #ffc;
+}
+/*styling van de broodtekst*/
+p {
+  color: white;
+  font-size: 1em;
+  font-family: Arial, Helvetica, sans-serif;
+  padding: 2%;
+}
+/*button styling*/
+button {
+  background-color: var(--merk-kleur);
+  padding: 2%;
+  border-radius: 6px;
+  border-style: none;
+  background-color: #ffc426;
+  background-image: -webkit-linear-gradient(top, #f7da66, #ffc426);
+  background-image: linear-gradient(to bottom, #f7da66, #ffc426);
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+}
+section.carousel button {
+  width: 27%;
+}
+.Imax {
+  width: 100%;
+  margin-top: 1em;
+}
+.Giftcard {
+  position: relative;
+  width: 100%;
+  margin-top: 1em;
+}
+footer {
+  background-color: var(--merk-kleur);
+  height: 5em;
+  margin: auto 0;
+  text-align: center;
+}
+.Icon {
+  margin-top: 1em;
+  width: 10%;
 }
